added search and save function

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Toronto</a>
+          <li class="nav-item d-flex" >
+            <a class="nav-link active" aria-current="page" href="#" id="toronto">Toronto</a>
+            <a class="nav-link active" aria-current="page" href="#" id="saved-0"></a>
+            <a class="nav-link active" aria-current="page" href="#" id="saved-1"></a>
+            <a class="nav-link active" aria-current="page" href="#" id="saved-2"></a>
           </li>
           <li></li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark" type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search-text">
+          <button class="btn btn-outline-dark" type="submit" id="search">Search</button>
         </form>
       </div>
     </div>
